update the exam docs
